--- a/Public/index.html
+++ b/Public/index.html
@@ -9,16 +9,16 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="ESTILOS/styles.css" />
+    <link rel="stylesheet" href="../Assets/Styles/styles.css" />
   </head>
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="Imágenes/pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Assets/Images/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
 
@@ -28,7 +28,7 @@
         <div class="logo">
           <a href="">
             <img
-              src="Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -40,17 +40,17 @@
             <div class="submenu">
               <a href="HTML\MapaInteractivo-HTML.html"
                 >Mapa Interactivo</a>
-              <a href="HTML\Recursos-HTML.html">Recursos</a>
-              <a href="HTML\NuestrosServicios-HTML.html">Nuestros servicios</a>
-              <a href="HTML\Evaluaciones-HTML.html">Evaluaciones</a>
-              <a href="HTML\SoporteTécnico-HTML.html">Soporte técnico</a>
+              <a href="Archivos.html\Recursos-HTML.html">Recursos</a>
+              <a href="Archivos.html\NuestrosServicios-HTML.html">Nuestros servicios</a>
+              <a href="Archivos.html\Evaluaciones-HTML.html">Evaluaciones</a>
+              <a href="Archivos.html\SoporteTécnico-HTML.html">Soporte técnico</a>
             </div>
           </div>
-          <a href="HTML\Contáctanos-HTML.html" class="btn-contacto"
+          <a href="Archivos.html\Contáctanos-HTML.html" class="btn-contacto"
             >CONTÁCTANOS</a
           >
           <a href="" class="btn-home">HOME</a>
-          <a href="HTML\IniciarSesión-HTML.html" class="btn-login"
+          <a href="Archivos.html\IniciarSesión-HTML.html" class="btn-login"
             >INICIAR SESIÓN</a
           >
         </nav>
@@ -67,14 +67,14 @@
             reducir barreras y fomentar una mayor equidad en la movilidad de
             personas con discapacidades.
           </p>
-          <a href="HTML/CrearCuenta-HTML.html">
+          <a href="Archivos.html/CrearCuenta-HTML.html">
             <button class="cta-button">CREAR CUENTA</button>
           </a>
           <h3>SOBRE LA APLICACIÓN</h3>
         </div>
         <div class="image">
           <img
-            src="Imágenes/pngwing.com (1).png"
+            src="../Assets/Images/pngwing.com (1).png"
             alt="Persona ayudando a un anciano en silla de ruedas"
           />
         </div>
@@ -82,7 +82,7 @@
       <div class="TABS">
         <a href="#Servicios-Includer" class="tab">SERVICIOS</a>
         <a href="#Nosotros-Includer" class="tab">NOSOTROS</a>
-        <a href="HTML\SoporteTécnico-HTML.html" class="tab"
+        <a href="Archivos.html\SoporteTécnico-HTML.html" class="tab"
           >SOPORTE</a
         >
       </div>
@@ -91,7 +91,7 @@
     <div class="Container_SN">
       <ul class="Banner_SN">
         <li>
-          <img src="Imágenes/icons8-facebook-nuevo-48.png" width="36" height="36" />
+          <img src="../Assets/Images/icons8-facebook-nuevo-48.png" width="36" height="36" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />Facebook</a
@@ -99,7 +99,7 @@
           </p>
         </li>
         <li>
-          <img src="Imágenes/icons8-instagram-48.png" width="36" height="36" />
+          <img src="../Assets/Images/icons8-instagram-48.png" width="36" height="36" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />Instagram</a
@@ -107,13 +107,13 @@
           </p>
         </li>
         <li>
-          <img src="Imágenes/icons8-twitterx-50.png" width="36" height="36" />
+          <img src="../Assets/Images/icons8-twitterx-50.png" width="36" height="36" />
           <p>
             <a href="Pagina Oficial" target="_blank">Danos un like<br />Twitter X</a>
           </p>
         </li>
         <li>
-          <img src="Imágenes/icons8-tik-tok-48.png" width="36" height="36" />
+          <img src="../Assets/Images/icons8-tik-tok-48.png" width="36" height="36" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />TikTok</a
@@ -121,7 +121,7 @@
           </p>
         </li>
         <li>
-          <img src="Imágenes/icons8-youtube-48.png" width="36" height="36" />
+          <img src="../Assets/Images/icons8-youtube-48.png" width="36" height="36" />
           <p>
             <a href="Pagina Oficial" target="_blank"
               >Danos un like<br />Youtube</a
@@ -141,7 +141,7 @@
           sistema de evaluación por usuarios y guías de planificación urbana
           para fomentar espacios inclusivos.
         </p>
-        <a href="HTML\CrearCuenta-HTML.html" class="tab-serv"
+        <a href="Archivos.html/CrearCuenta-HTML.html" class="tab-serv"
           >REGÍSTRATE</a
         >
       </div>
@@ -165,7 +165,7 @@
         </div>
         <div class="imagen">
           <img
-            src="Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Assets/Images/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Persona ayudando a un anciano en silla de ruedas"
           />
         </div>
@@ -174,11 +174,11 @@
     <section class="Nosotros-tabs">
       <div class="text-content">
         <div class="tabs">
-          <a href="HTML\MapaInteractivo-HTML.html" class="tab"
+          <a href="Archivos.html\MapaInteractivo-HTML.html" class="tab"
             >MAPA INTERACTIVO</a
           >
-          <a href="HTML\Evaluaciones-HTML.html" class="tab">EVALUACIONES</a>
-          <a href="HTML\Recursos-HTML.html" class="tab">RECURSOS</a>
+          <a href="Archivos.html\Evaluaciones-HTML.html" class="tab">EVALUACIONES</a>
+          <a href="Archivos.html\Recursos-HTML.html" class="tab">RECURSOS</a>
         </div>
         <h1>¡HACIA UNA MOVILIDAD SIN LÍMITES PARA TODAS LAS PERSONAS!</h1>
       </div>
@@ -189,7 +189,7 @@
         <div class="footer-column">
           <h3>
             <img
-              src="Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Logo Includer"
               style="width: 40px; vertical-align: middle; margin-right: 10px"
             />
