CrearCuenta-HTML.html

--- a/Public/Archivos.html/CrearCuenta-HTML.html
+++ b/Public/Archivos.html/CrearCuenta-HTML.html
@@ -8,17 +8,17 @@
       href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&family=Luckiest+Guy&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Unbounded:wght@200..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../ESTILOS/CrearCuenta-CSS.css" />
+    <link rel="shortcut icon" href="..Favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="../Assets/Styles/Archivos.css/CrearCuenta-CSS.css" />
   </head>
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="../Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Assets/Images/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Barra de Navegación -->
@@ -27,7 +27,7 @@
         <div class="logo">
           <a href="../index.html">
             <img
-              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -95,12 +95,12 @@
 
         <div class="illustrations">
           <img
-            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Assets/Images/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración izquierda"
             class="left-illustration"
           />
           <img
-            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Assets/Images/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración derecha"
             class="right-illustration"
           />
@@ -108,5 +108,5 @@
       </div>
     </div>
   </body>
-  <script src="../JavaScript/CrearCuenta-JS.js"></script>
+  <script src="../Assets/Scripts/Archivos.js/CrearCuenta-JS.js"></script>
 </html>
