--- a/Public/Archivos.html/NuestrosServicios-HTML.html
+++ b/Public/Archivos.html/NuestrosServicios-HTML.html
@@ -9,16 +9,16 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../ESTILOS/NuestrosServicios-CSS.css" />
+    <link rel="stylesheet" href="../Assets/Styles/Archivos.css/NuestrosServicios-CSS.css" />
     <title>Nuestros Servicios</title>
   </head>
   <body>
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="../Imágenes\pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="../Imágenes\pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="../Imágenes\pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Assets/Images/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <section class="services">
@@ -74,7 +74,7 @@
           <h3>  
             <a href="../index.html"">
                 <img
-                  src="../Imágenes\LOGO_INCLUDER-removebg-preview (4).png"
+                  src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
                   alt="Logo Includer"
                   style="width: 40px; vertical-align: middle; margin-right: 10px"
                 />
