--- a/Public/Archivos.html/IniciarSesión-HTML.html
+++ b/Public/Archivos.html/IniciarSesión-HTML.html
@@ -9,16 +9,16 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="../Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../ESTILOS/IniciarSesión-CSS.css" />
+    <link rel="stylesheet" href="../Assets/Styles/Archivos.css/IniciarSesión-CSS.css" />
   </head>
   <body>
     <!-- Barra Superior -->
     <div class="barra-superior">
       <span>ENCUÉNTRANOS EN</span>
       <div class="social-icons">
-        <a href="#"><img src="../Imágenes/pngwing.com (5).png" alt="TikTok" /></a>
-        <a href="#"><img src="../Imágenes/pngegg.png" alt="Facebook" /></a>
-        <a href="#"><img src="../Imágenes/pngwing.com (6).png" alt="Instagram" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (5).png" alt="TikTok" /></a>
+        <a href="#"><img src="../Assets/Images/pngegg.png" alt="Facebook" /></a>
+        <a href="#"><img src="../Assets/Images/pngwing.com (6).png" alt="Instagram" /></a>
       </div>
     </div>
     <!-- Barra de Navegación -->
@@ -27,7 +27,7 @@
         <div class="logo">
           <a href="../index.html">
             <img
-              src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+              src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
               alt="Includer Logo"
             />
           </a>
@@ -41,7 +41,7 @@
     <!-- Sección Iniciar sesion -->
     <div class="Inicio-sesion">
       <div id="INICIAR-SESION">
-        <img src="../Imágenes/pngwing.com (8).png" alt="Persona" class="bienvenido" />
+        <img src="../Assets/Images/pngwing.com (8).png" alt="Persona" class="bienvenido" />
         <h1>BIENVENIDO A INCLUDER</h1>
         <div class="input-group">
           <form name="frm" method="post" action="">
@@ -64,22 +64,22 @@
       <div class="Ingresa-con">
         <p class="login-text">O INGRESA CON</p>
         <div class="iconos-ingresa">
-          <img src="../Imágenes/pngwing.com (7).png" alt="Google" class="ingresa-g" />
+          <img src="../Assets/Images/pngwing.com (7).png" alt="Google" class="ingresa-g" />
           <img
-            src="../Imágenes/pngwing.com (6).png"
+            src="../Assets/Images/pngwing.com (6).png"
             alt="instagram"
             class="ingresa-ig"
           />
-          <img src="../Imágenes/pngegg.png" alt="facebook" class="ingresa-fb" />
+          <img src="../Assets/Images/pngegg.png" alt="facebook" class="ingresa-fb" />
         </div>
         <div class="illustrations">
           <img
-            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Assets/Images/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración izquierda"
             class="left-illustration"
           />
           <img
-            src="../Imágenes/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
+            src="../Assets/Images/PERSONA EN SILLA DE RUEDAS SUBIENDO RAMPA.jpg"
             alt="Ilustración derecha"
             class="right-illustration"
           />
@@ -87,5 +87,5 @@
       </div>
     </div>
   </body>
-  <script src="../JavaScript/IniciarSesión-JS.js"></script>
+  <script src="../Assets/Scripts/Archivos.js/IniciarSesión-JS.js"></script>
 </html>
