--- a/Public/index.html
+++ b/Public/index.html
@@ -38,19 +38,19 @@
           <div class="menu-explora">
             <a href="" class="btn-explora">EXPLORA</a>
             <div class="submenu">
-              <a href="HTML\MapaInteractivo-HTML.html"
+              <a href="../Archivos.html/MapaInteractivo-HTML.html"
                 >Mapa Interactivo</a>
-              <a href="Archivos.html\Recursos-HTML.html">Recursos</a>
-              <a href="Archivos.html\NuestrosServicios-HTML.html">Nuestros servicios</a>
-              <a href="Archivos.html\Evaluaciones-HTML.html">Evaluaciones</a>
-              <a href="Archivos.html\SoporteTécnico-HTML.html">Soporte técnico</a>
+              <a href="../Archivos.html/Recursos-HTML.html">Recursos</a>
+              <a href="../Archivos.html/NuestrosServicios-HTML.html">Nuestros servicios</a>
+              <a href="../Archivos.html/Evaluaciones-HTML.html">Evaluaciones</a>
+              <a href="../Archivos.html/SoporteTécnico-HTML.html">Soporte técnico</a>
             </div>
           </div>
-          <a href="Archivos.html\Contáctanos-HTML.html" class="btn-contacto"
+          <a href="../Archivos.html/Contáctanos-HTML.html" class="btn-contacto"
             >CONTÁCTANOS</a
           >
           <a href="" class="btn-home">HOME</a>
-          <a href="Archivos.html\IniciarSesión-HTML.html" class="btn-login"
+          <a href="../Archivos.html/IniciarSesión-HTML.html" class="btn-login"
             >INICIAR SESIÓN</a
           >
         </nav>
@@ -67,7 +67,7 @@
             reducir barreras y fomentar una mayor equidad en la movilidad de
             personas con discapacidades.
           </p>
-          <a href="Archivos.html/CrearCuenta-HTML.html">
+          <a href="../Archivos.html/CrearCuenta-HTML.html">
             <button class="cta-button">CREAR CUENTA</button>
           </a>
           <h3>SOBRE LA APLICACIÓN</h3>
@@ -82,7 +82,7 @@
       <div class="TABS">
         <a href="#Servicios-Includer" class="tab">SERVICIOS</a>
         <a href="#Nosotros-Includer" class="tab">NOSOTROS</a>
-        <a href="Archivos.html\SoporteTécnico-HTML.html" class="tab"
+        <a href="../Archivos.html/SoporteTécnico-HTML.html" class="tab"
           >SOPORTE</a
         >
       </div>
@@ -141,7 +141,7 @@
           sistema de evaluación por usuarios y guías de planificación urbana
           para fomentar espacios inclusivos.
         </p>
-        <a href="Archivos.html/CrearCuenta-HTML.html" class="tab-serv"
+        <a href="../Archivos.html/CrearCuenta-HTML.html" class="tab-serv"
           >REGÍSTRATE</a
         >
       </div>
@@ -174,11 +174,11 @@
     <section class="Nosotros-tabs">
       <div class="text-content">
         <div class="tabs">
-          <a href="Archivos.html\MapaInteractivo-HTML.html" class="tab"
+          <a href="../Archivos.html/MapaInteractivo-HTML.html" class="tab"
             >MAPA INTERACTIVO</a
           >
-          <a href="Archivos.html\Evaluaciones-HTML.html" class="tab">EVALUACIONES</a>
-          <a href="Archivos.html\Recursos-HTML.html" class="tab">RECURSOS</a>
+          <a href="../Archivos.html/Evaluaciones-HTML.html" class="tab">EVALUACIONES</a>
+          <a href="../Archivos.html/Recursos-HTML.html" class="tab">RECURSOS</a>
         </div>
         <h1>¡HACIA UNA MOVILIDAD SIN LÍMITES PARA TODAS LAS PERSONAS!</h1>
       </div>
