--- a/Public/index.html
+++ b/Public/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="Favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../Assets/Styles/styles.css" />
+    <link rel="stylesheet" href="Assets/Styles/styles.css" />
   </head>
   <body>
     <!-- Barra Superior -->
