--- a/Public/index.html
+++ b/Public/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="image">
           <img
-            src="../Assets/Images/pngwing.com (1).png"
+            src="Assets/Images/pngwing.com (1).png"
             alt="Persona ayudando a un anciano en silla de ruedas"
           />
         </div>
