--- a/Public/Archivos.html/Contáctanos-HTML.html
+++ b/Public/Archivos.html/Contáctanos-HTML.html
@@ -177,7 +177,7 @@
           <h3>  
           <a href="../index.html">
               <img
-                src="../Imágenes/LOGO_INCLUDER-removebg-preview (4).png"
+                src="../Assets/Images/LOGO_INCLUDER-removebg-preview (4).png"
                 alt="Logo Includer"
                 style="width: 40px; vertical-align: middle; margin-right: 10px"
               />
